--- a/glide.yaml
+++ b/glide.yaml
@@ -1,8 +1,7 @@
 package: hashgard
 import:
 - package: github.com/cosmos/cosmos-sdk
-  version: v0.26.1-rc1-hashgard
-  repo:    git@github.com:hashgard/cosmos-sdk.git
+  version: v0.28.0
   subpackages:
   - baseapp
   - client
@@ -27,7 +26,7 @@ import:
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
 - package: github.com/tendermint/tendermint
-  version: v0.26.1-rc3
+  version: v0.27.0
   subpackages:
   - abci/types
   - libs/cli
