--- a/glide.yaml
+++ b/glide.yaml
@@ -4,11 +4,16 @@ import:
   version: v0.28.0
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
+- package: github.com/tendermint/iavl
+  version: v0.12.0
+- package: github.com/tendermint/go-amino
+  version: v0.14.1
 - package: github.com/tendermint/tendermint
   version: v0.27.0
+- package: github.com/zondax/ledger-cosmos-go
+  version: v0.9.2
 - package: golang.org/x/crypto
   repo:    git@github.com:tendermint/crypto.git
-- package: github.com/syndtr/goleveldb
 testImport:
 - package: github.com/stretchr/testify
   subpackages:
