--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,8 @@
 package: hashgard
 import:
 - package: github.com/cosmos/cosmos-sdk
-  version: v0.28.0
+  repo:    https://github.com/hashgard/cosmos-sdk.git
+  version: v0.28.0-hashgard
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
 - package: github.com/tendermint/iavl
@@ -13,7 +14,9 @@ import:
 - package: github.com/zondax/ledger-cosmos-go
   version: v0.9.2
 - package: golang.org/x/crypto
-  repo:    git@github.com:tendermint/crypto.git
+  repo:    https://github.com/tendermint/crypto.git
+- package: github.com/rakyll/statik
+  version: v0.1.4
 testImport:
 - package: github.com/stretchr/testify
   subpackages:
