--- a/glide.yaml
+++ b/glide.yaml
@@ -2,7 +2,7 @@ package: hashgard
 import:
 - package: github.com/cosmos/cosmos-sdk
   repo:    https://github.com/hashgard/cosmos-sdk.git
-  version: v0.29.1
+  version: v0.29.1-hashgard
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
 - package: github.com/tendermint/iavl
