--- a/glide.yaml
+++ b/glide.yaml
@@ -41,6 +41,12 @@ import:
   version: ed77733ec07dfc8a513741138419b8d9d3de9d2d
 - package: github.com/cosmos/go-bip39
   version: 52158e4697b87de16ed390e1bdaf813e581008fa
+- package: github.com/cosmos/ledger-cosmos-go
+  repo:    https://github.com/cosmos/ledger-cosmos-go.git
+  version: =v0.9.8
+- package: github.com/zondax/ledger-go
+  repo:    https://github.com/cosmos/ledger-cosmos-go.git
+  version: =v0.9.8
 testImport:
 - package: github.com/stretchr/testify
   subpackages:
