--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,8 @@
   "description": "harhgard",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
+    "docs:dev": "vuepress dev .",
+    "docs:build": "vuepress build .",
     "deploy": "bash deploy.sh"
   },
   "repository": {
