--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,23 @@ jobs:
       - store_artifacts:
           path: /tmp/logs
 
+  test_cli:
+    <<: *linux_defaults
+    parallelism: 1
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - checkout
+      - *dependencies
+      - restore_cache:
+          keys:
+            - go-mod-v1-{{ checksum "go.sum" }}
+      - run:
+          name: Test cli
+          command: |
+            export PATH="$GOBIN:$PATH"
+            make test_cli
+
 workflows:
   version: 2
   test-suite:
@@ -108,5 +125,8 @@ workflows:
           requires:
             - setup_dependencies
       - test_cover:
+          requires:
+            - setup_dependencies
+      - test_cli:
           requires:
             - setup_dependencies
